@@ -1,11 +1,13 @@
 /*
- * Copyright 2022-2024 Broadcom. All rights reserved.
+ * Copyright 2022-2026 Broadcom. All rights reserved.
  * SPDX-License-Identifier: Apache-2.0
  */
 package org.springframework.data.gemfire.listener;
 
 import java.lang.reflect.Method;
+import java.util.Arrays;
 import java.util.Collections;
+import java.util.HashSet;
 import java.util.Optional;
 import java.util.Set;
 import java.util.function.Function;
@@ -63,7 +65,8 @@ public class ContinuousQueryDefinition implements InitializingBean {
 
 		boolean durable = continuousQuery.durable();
 
-		Set<CQEvent> excludedEvents = Set.of(continuousQuery.excludedEvents());
+		Set<CQEvent> excludedEvents =
+			Collections.unmodifiableSet(new HashSet<>(Arrays.asList(continuousQuery.excludedEvents())));
 
 		return new ContinuousQueryDefinition(name, query, listener, durable, excludedEvents);
 	}
@@ -179,11 +182,12 @@ public class ContinuousQueryDefinition implements InitializingBean {
 	}
 
 	private ExcludedEvent mapCQEventToExcludedEvent(CQEvent cqEvent) {
-        return switch (cqEvent) {
-            case UPDATE -> ExcludedEvent.UPDATE;
-            case CREATE -> ExcludedEvent.CREATE;
-            case INVALIDATE -> ExcludedEvent.INVALIDATE;
-            case DESTROY -> ExcludedEvent.DESTROY;
-        };
+		switch (cqEvent) {
+			case UPDATE: return ExcludedEvent.UPDATE;
+			case CREATE: return ExcludedEvent.CREATE;
+			case INVALIDATE: return ExcludedEvent.INVALIDATE;
+			case DESTROY: return ExcludedEvent.DESTROY;
+			default: throw new IllegalArgumentException(String.format("Unsupported CQEvent: %s", cqEvent));
+		}
 	}
 }
